# sway-applications

./: .gitattributes  .gitignore  APPLICATION_PROGRESS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  build.sh  docker-compose.yml  forc_badge_check.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vercel.json
.devops/aurora/: .gitignore  Cargo.toml  README.md  apps.txt
.devops/aurora/src/: cli.rs  utils.rs
.devops/aurora/src/commands/: build.rs  bump.rs  fmt.rs  mod.rs
AMM/contracts/AMM/: Cargo.toml  Forc.toml
AMM/contracts/AMM/src/: errors.sw  events.sw  interface.sw  main.sw  utils.sw
AMM/contracts/exchange/: Cargo.toml  Forc.toml
AMM/contracts/exchange/src/: data_structures.sw  errors.sw  events.sw  interface.sw  main.sw  utils.sw
AMM/exchange-contract/: Cargo.toml  Forc.toml
AMM/exchange-contract/src/: errors.sw  events.sw  main.sw
AMM/project/: Cargo.toml  Forc.toml  README.md  SPECIFICATION.md  fuel-toolchain.toml
AMM/project/frontend/: package-lock.json  package.json
AMM/project/libraries/: Forc.toml
AMM/project/test-utils/: Cargo.toml
AMM/scripts/deposit_and_add_liquidity/: Cargo.toml  Forc.toml
AMM/scripts/swap_with_exact_input_along_route/: Cargo.toml
AMM/swap-exact-input/: Cargo.toml  Forc.toml
AMM/swap-exact-input/src/: main.sw
airdrop/airdrop-distributor/: Cargo.toml  Forc.toml
airdrop/airdrop-distributor/src/: data_structures.sw  errors.sw  events.sw  interface.sw  main.sw  utils.sw
auctions/english-auction/: .eslintignore  .eslintrc.js  .gitignore  .lintstagedrc  .prettierignore  Cargo.toml  README.md  SPECIFICATION.md  english-auction.config.ts  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
auctions/english-auction/.docs/: english-auction-sequence-diagram.png:Zone.Identifier
auctions/english-auction/.husky/: pre-commit
auctions/english-auction/docker/: .env  .env.test  Makefile  README.md  docker-compose.yml
auctions/english-auction/project/: Cargo.toml  Forc.toml  SPECIFICATION.md  fuel-toolchain.toml
auctions/english-auction/src/: abi.sw  contract_abi.sw  data_structures.sw  errors.sw  events.sw  interface.sw  main.sw  utils.sw
auctions/english-auction/tests/: harness.rs
eth-account-abstraction/: Cargo.toml  Forc.toml  compare.md  compare_results.md
eth-account-abstraction/src/: compare.rs  compare_pk_strings.rs  derive_from_secp.rs  derive_from_wallet.rs  main.rs  main.sw  pre_main.sw  predicate_main.sw  recover.sw  script_recover.sw  utils.sw
eth-account-abstraction/tests/: harness.rs
eth-account-abstraction/tests/utils/: mod.rs
merkle_predicate/: Cargo.toml  Forc.toml  fuel-toolchain.toml
merkle_predicate/src/: main.sw
merkle_predicate/tests/: harness.rs
metamask-predicate/: .gitignore  Cargo.toml  Forc.toml
metamask-predicate/src/: main.sw
metamask-predicate/tests/: harness.rs
multisig-wallet/: .gitignore  Cargo.toml  Forc.toml  README.md  SPECIFICATION.md  fuel-toolchain.toml
multisig-wallet/.docs/: sequence-diagram.drawio
multisig-wallet/multisig-contract/: Cargo.toml
multisig-wallet/multisig-contract/src/: data_structures.sw  events.sw  main.sw  utils.sw
multisig-wallet/project/: Forc.toml  SPECIFICATION.md
multisig-wallet/project/multisig-contract/: Cargo.toml  Forc.toml
multisig-wallet/src/: abi.sw  contract_abi.sw  data_structures.sw  errors.sw  events.sw  interface.sw  main.sw  utils.sw
multisig-wallet/test-artifacts/target-contract/: Forc.toml
multisig-wallet/tests/: harness.rs
multisig-wallet/tests/functions/: constructor.rs  mod.rs  nonce.rs  transaction_hash.rs
multisig-wallet/tests/utils/: mod.rs
multisig-wallet/ui/: README.md
multisig-wallet/ui/app/: .env  .prettierrc  index.html  package.json  pnpm-lock.yaml
multisig-wallet/ui/app/src/: .env  (+2 more)
multisig-wallet/ui/config/: Dockerfile-client  Dockerfile-ui  chainConfig.json  docker-compose.yml
multisig-wallet/ui/scripts/: start_node.sh  start_ui.sh
oracle/: .gitignore  Cargo.toml  Forc.toml  README.md  SPECIFICATION.MD  SPECIFICATION.md  fuel-toolchain.toml
oracle/node/: .gitignore  Cargo.toml
oracle/node/src/: main.rs  oracle_node.rs
oracle/oracle-contract/: Cargo.toml
oracle/oracle-contract/src/: errors.sw  events.sw  interface.sw
oracle/oracle-contract/tests/: harness.rs
oracle/oracle-node/: .chainConfig.json  Cargo.toml
oracle/oracle-node/src/: lib.rs  main.rs
oracle/project/: Cargo.toml
oracle/project/oracle-contract/: Cargo.toml  Forc.toml
oracle/project/oracle-node/: .chainConfig.json  Cargo.toml
oracle/project/utils/: Cargo.toml
oracle/src/: data_structures.sw  errors.sw  events.sw  interface.sw  main.sw
oracle/tests/: harness.rs
oracle/tests/functions/: constructor.rs  mod.rs  owner.rs  price.rs  set_price.rs
oracle/tests/utils/: mod.rs
oracle/utils/: Cargo.toml  mod.rs
oracle/utils/src/: lib.rs
otc-swap-predicate/: Cargo.toml  Forc.toml  README.md
otc-swap-predicate/src/: main.sw
otc-swap-predicate/tests/: harness.rs
otc-swap-predicate/tests/utils/: mod.rs
otc_swap_predicate/: Cargo.toml  Forc.toml
otc_swap_predicate/src/: main.sw
otc_swap_predicate/tests/: harness.rs
staking-rewards/: Cargo.toml  Forc.toml  README.md  SPECIFICATION.md
staking-rewards/.docs/: staking-rewards-logo-light-theme.png:Zone.Identifier
staking-rewards/src/: data_structures.sw  errors.sw  interface.sw  main.sw  staking_rewards.sw  staking_rewards_abi.sw  staking_rewards_errors.sw  staking_rewards_events.sw
staking-rewards/tests/: harness.rs
staking-rewards/tests/functions/: balance_of.rs  earned.rs  exit.rs  get_reward.rs  get_reward_for_duration.rs  last_time_reward_applicable.rs  last_update_time.rs  mod.rs  notify_reward_amount.rs  owner.rs  period_finish.rs  recover_tokens.rs  reward_per_token_paid.rs  reward_per_token_stored.rs  rewards.rs  stake.rs
staking-rewards/tests/utils/: abi.rs  mod.rs
swayswap/contracts/exchange_contract/: Cargo.toml  Forc.toml
swayswap/contracts/swayswap_contract/: Cargo.toml  Forc.toml
swayswap/scripts/: Cargo.toml  Forc.toml
(+2819 files in other folders)
