[project]
name = "eth-account-abstraction"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.39"
fuels = { version = "0.25", features = ["fuel-core-lib"] }
fuel-crypto = "0.6"
fuel-tx = "0.18"
fuel-types = { version = "0.5", default-features = false }
fuel-vm = "0.15"
secp256k1 = { version = "0.20", features = ["recovery"] }
sha3 = "0.10"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"