[project]
name = "eth-account-abstraction"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuel-crypto = "0.6"
fuel-vm = "0.15"
fuels = { version = "0.28", features = ["fuel-core-lib"] }
sha3 = "0.10.6"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"