[package]
name = "test_predicate"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["bitzoic <cameron.carstens@fuel.sh>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.41.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
fuel-merkle = { version = "0.33.0" }
sha2 = { version = "0.10" }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
