[project]
name = "multisig-wallet"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
bincode = "1.3"
fuels = { version = "0.31", features = ["fuel-core-lib"] }
rand = "0.8"
serde = { version = "1.0.87", features = ["derive"] }
sha3 = "0.10.6"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
