[project]
name = "oracle"
version = "0.1.0"
authors = ["Matt Auer"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { version = "0.25", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11.12"
dotenv = "0.15.0"

[[bin]]
name = "node"
path = "node/src/main.rs"

[lib]
name = "utils"
path = "utils/mod.rs"

[[test]]
harness = true
name = "integration_tests"
path = "contract/tests/harness.rs"
