[project]
name = "otc-swap-predicate"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuel-core = { version = "0.9", default-features = false }
fuel-gql-client = { version = "0.9", default-features = false }
# fuels = { version = "0.17", features = ["fuel-core-lib"] }
fuels = { git = "https://github.com/FuelLabs/fuels-rs.git", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
