[project]
name = "otc-swap-predicate"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuel-gql-client = { version = "0.10.1", default-features = false }
fuels = { version = "0.25", features = ["fuel-core-lib"] }

tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
