[project]
name = "OTC_swap_predicate"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { version = "0.16", features = ["fuel-core-lib"] }
fuel-core = { version = "0.9", default-features = false }
fuel-crypto = "0.5"

fuel-gql-client = { version = "0.9", default-features = false }
fuels-contract = { version = "0.16" }
fuels-signers = { version = "0.16" }
fuels-abigen-macro = "0.16"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
