[project]
name = "staking-rewards"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { version = "0.34", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
tai64 = "4.0.0"
chrono = "0.4.23"

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
