[package]
name = "aurora"
version = "0.1.0"
edition = "2021"
authors = ["Fuel Labs <contact@fuel.sh>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
