[project]
name = "multisig-contract"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuel-crypto = "0.49.0"
fuels = { version = "0.63.0", features = ["fuel-core-lib"] }
rand = "0.8"
sha3 = "0.10.8"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
