[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.145"
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
