[project]
name = "oracle-contract"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { version = "0.61.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["full"] }
utils = { path = "../utils" }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
