[project]
name = "oracle-node"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
dotenv = "0.15.0"
fuels = { version = "0.58.0", features = ["fuel-core-lib"] }
futures = "0.3"
itertools = "0.11"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.12", features = ["full"] }
utils = { path = "../utils" }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
