[package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"
name = "AMM"
version = "0.0.0"

[dependencies]
fuels = { version = "0.30", features = ["fuel-core-lib"] }
tokio = { version = "1.21.0", features = ["rt", "macros"] }

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"
