[package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"
name = "tests"
version = "0.0.0"

[dependencies]
fuels = { version = "0.25", features = ["fuel-core-lib"] }
rand = "0.8.5"
tokio = { version = "1.21.0", features = ["rt", "macros"] }

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"
