[package]
name = "test-utils"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { git = "https://github.com/FuelLabs/fuels-rs.git", branch = "hal3e/contract-logs-in-scripts", features = ["fuel-core-lib"] }

[lib]
doctest = false
