[package]
name = "swap-exact-input"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
fuel-gql-client = { version = "0.14.1", default-features = false }
fuels = { git = "https://github.com/FuelLabs/fuels-rs.git", branch = "hal3e/script-vec-support", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
test-utils = { path = "../../test-utils" }

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"
